--- a/BlogPessoalFront/src/app/cadastrar/cadastrar.component.html
+++ b/BlogPessoalFront/src/app/cadastrar/cadastrar.component.html
@@ -18,29 +18,29 @@
 
                         <div class="form-group">
                             <label for="usuario">Usuario</label>
-                            <input class="form-control" type="text" name="usuario" id="usuario" placeholder="Usuario">
+                            <input [(ngModel)]="usuario.usuario" class="form-control" type="text" name="usuario" id="usuario" placeholder="Usuario">
                         </div>
 
                         <div class="form-group">
                             <label for="foto">Link da Foto</label>
-                            <input class="form-control" type="text" name="foto" id="foto"
+                            <input [(ngModel)]="usuario.foto" class="form-control" type="text" name="foto" id="foto"
                                 placeholder="Link da sua Foto">
                         </div>
 
                         <div class="form-group">
                             <label for="senha">Senha</label>
-                            <input class="form-control" type="password" name="senha" id="senha" placeholder="Senha">
+                            <input (input)="confirmaSenha($event)" class="form-control" type="password" name="senha" id="senha" placeholder="Senha">
                         </div>
 
                         <div class="form-group">
                             <label for="confirmSenha">Confirmar Senha</label>
-                            <input class="form-control" type="password" name="confirmsenha" id="confirmsenha"
+                            <input [(ngModel)]="usuario.senha" class="form-control" type="password" name="confirmsenha" id="confirmsenha"
                                 placeholder="Confirme sua Senha">
                         </div>
 
                         <div class="form-group">
                             <label for="tipo">Tipo de Usuario</label>
-                            <select class="form-control" name="tipo" id="tipo">
+                            <select (change)="tipoUsuarioo($event)" class="form-control" name="tipo" id="tipo">
                                 <option>Selecione um tipo de usuario:</option>
                                 <option value="normal">Normal</option>
                                 <option value="administrador">Administrador</option>
