--- a/BlogPessoalFront/src/app/cadastrar/cadastrar.component.html
+++ b/BlogPessoalFront/src/app/cadastrar/cadastrar.component.html
@@ -13,7 +13,7 @@
 
                         <div class="form-group">
                             <label for="nome">Nome</label>
-                            <input class="form-control" type="text" name="nome" id="nome" placeholder="Nome">
+                            <input [(ngModel)]='usuario.nome' class="form-control" type="text" name="nome" id="nome" placeholder="Nome" >
                         </div>
 
                         <div class="form-group">
@@ -48,8 +48,10 @@
                         </div>
 
                         <div class="d-flex justify-content-center">
+                            
                             <button type="submit" class="btn btn-danger mr-4" routerLink="/entrar">Cancelar</button>
-                            <button type="submit" class="btn btn-success">Cadastrar</button>
+
+                            <button type="submit" class="btn btn-success" (click)="cadastrar()" >Cadastrar</button>
 
                         </div>
 
