--- a/BlogPessoalFront/src/app/entrar/entrar.component.css
+++ b/BlogPessoalFront/src/app/entrar/entrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('https://i.imgur.com/T9r5N9x.jpg');
+    background-image: url('https://i.imgur.com/A758ZVd.png');
 
     min-height: 835px; /*Tamanho*/
 
