--- a/BlogPessoalFront/src/app/entrar/entrar.component.html
+++ b/BlogPessoalFront/src/app/entrar/entrar.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
 
-    <div class="row d-flex align-items-center"> 
+    <div class="row d-flex align-items-center">
         <!-- Centralizar ao meio da img -->
 
         <div class="col-md-6">
@@ -11,14 +11,14 @@
 
                     <div class="form-group">
                         <label for="usuario">Usuario</label>
-                        <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario" id="usuario" 
-                        placeholder="Usuario">
+                        <input [(ngModel)]="usuarioLogin.usuario" class="form-control" type="text" name="usuario"
+                            id="usuario" placeholder="Usuario">
                     </div>
 
                     <div class="form-group">
                         <label for="senha">Senha</label>
-                        <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha" id="senha" 
-                        placeholder="Senha">
+                        <input [(ngModel)]="usuarioLogin.senha" class="form-control" type="password" name="senha"
+                            id="senha" placeholder="Senha">
                     </div>
 
                     <div class="d-flex justify-content-center">
