--- a/BlogPessoalFront/src/app/edit/postagem-edit/postagem-edit.component.html
+++ b/BlogPessoalFront/src/app/edit/postagem-edit/postagem-edit.component.html
@@ -34,8 +34,8 @@
 
 
                 <div class="d-flex justify-content-center">
-                    <button class="btn btn-danger mr" routerLink="/inicio">Cancelar</button>
-                    <button class="btn btn-success" (click)="atualizar">Atualizar</button>
+                    <button class="btn btn-danger mr-3" routerLink="/inicio">Cancelar</button>
+                    <button class="btn btn-success" (click)="atualizar()">Atualizar</button>
 
                 </div>
 
