Revert "Implementação de put e delete em postagem"

--- a/BlogPessoalFront/src/app/delete/postagem-delete/postagem-delete.component.html
+++ b/BlogPessoalFront/src/app/delete/postagem-delete/postagem-delete.component.html
@@ -8,7 +8,8 @@
 
     <div class="row">
         <div class="col-md-12">
-            <h4 class="text-center text-secondary">Você tem certeza que dejesa apagar essa postagem?</h4>
+            <h4 class="text-center text-secondary">Você tem certeza que dejesa apagar essa postagem?
+            </h4>
         </div>
     </div>
 
