Alterando foto de cadastro

--- a/BlogPessoalFront/src/app/cadastrar/cadastrar.component.css
+++ b/BlogPessoalFront/src/app/cadastrar/cadastrar.component.css
@@ -1,5 +1,5 @@
 #img-bg{
-    background-image: url('https://i.imgur.com/T9r5N9x.jpg');
+    background-image: url('https://i.imgur.com/YuD0L2p.png');
 
     min-height: 835px; /*Tamanho*/
 
