--- a/BlogPessoalFront/src/app/inicio/inicio.component.html
+++ b/BlogPessoalFront/src/app/inicio/inicio.component.html
@@ -9,7 +9,7 @@
             </div>
 
             <div class="row d-flex justify-content-center mt-3 mb-5">
-                <div class="col-md-6">
+                <div class="">
                     <button class="btn btn-light mr-2" data-toggle="modal" data-target="#novaPostagem">
                         Nova Postagem
                     </button>
