--- a/BlogPessoalFront/src/app/delete/tema-delete/tema-delete.component.html
+++ b/BlogPessoalFront/src/app/delete/tema-delete/tema-delete.component.html
@@ -21,8 +21,8 @@
     <div class="row">
         <div class="col-md-12 d-flex justify-content-center">
             <button class="btn btn-danger mr-4" routerLink="/tema">Não</button>
-            <button class="btn btn-sucess" (click)="apagar()">Sim</button>
-        </div>
+            <button type="submit" class="btn btn-sucess" (click)="apagar()">Sim</button>
+            </div>
     </div>
 
 </div>
