Ordenação de postagens

--- a/BlogPessoalFront/src/app/inicio/inicio.component.html
+++ b/BlogPessoalFront/src/app/inicio/inicio.component.html
@@ -48,7 +48,8 @@
     <div class="tab-content mt-4" id="myTabContent">
         <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel" aria-labelledby="todasPostagens-tab">
             <div class="card-columns">
-                <div class="card text-center" *ngFor='let items of listaPostagens' style="width: 18rem">
+                <div class="card text-center" 
+                *ngFor='let items of listaPostagens | orderBy : key : reserse' style="width: 18rem">
                     <div class="card-body">
                         <h5 class="card-title m-0">{{ items.titulo }}</h5>
                         <small class="text-muted"> Tema: {{ items.tema.descricao }} </small>
@@ -73,7 +74,7 @@
         <div class="tab-pane fade" id="minhasPostagens" role="tabpanel" aria-labelledby="minhasPostagens-tab">
 
             <div class="card-columns">
-                <div class="card text-center" *ngFor='let item of usuario.postagem'>
+                <div class="card text-center" *ngFor='let item of usuario.postagem | orderBy : key : reserse'>
                     <div class="card-body">
                         <h5 class="card-title m-0">{{item.titulo}}</h5>
                         <small class="text-muted">Tema: {{item.tema.descricao}}</small>
@@ -97,7 +98,7 @@
                 <div class="tab-pane fade show active" id="todasPostagens" role="tabpanel"
                     aria-labelledby="todasPostagens-tab">
                     <div class="card-columns" *ngFor='let tema of listaTemas'>
-                        <div class="card text-center" *ngFor='let items of tema.postagem' style="width: 18rem">
+                        <div class="card text-center" *ngFor='let items of tema.postagem | orderBy : key : reserse' style="width: 18rem">
                             <div class="card-body">
                                 <h5 class="card-title m-0">{{ items.titulo }}</h5>
                                 <p class="card-text mt-3">{{ items.texto }}</p>
